--- a/sicongliu.html
+++ b/sicongliu.html
@@ -223,7 +223,7 @@
 <br>
 <p><strong>期刊论文 Journals</strong></p>
 
-	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control for Massive MIMO Networks: A Reinforcement Learning Based Approach," <i>IEEE Transactions on Wireless Communications</i>, doi: 10.1109/TWC.2024.3365153, Feb. 2024.
+	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control for Massive MIMO Networks: A Reinforcement Learning Based Approach," <i>IEEE Transactions on Wireless Communications</i>, vol. 23, no. 8, pp. 9730-9744, Aug. 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443316">Abstract</a>][<a target="blank"  href="papers/TWC24tang.pdf">PDF</a>][<a target="blank"  href="papers/TWC24tang.txt">bibtex</a>]</p>
 
 	<p>&bull; <b>S. Liu*</b>, X. Wang, J. Song and Z. Han, "Cooperative Robotics Visible Light Positioning: An Intelligent Compressed Sensing and GAN-Enabled Framework," <i>IEEE Journal of Selected Topics in Signal Processing</i>, doi: 10.1109/JSTSP.2024.3368661, Feb. 2024.
