--- a/sicongliu.html
+++ b/sicongliu.html
@@ -43,8 +43,8 @@
 					<p>厦门大学信息学院 副教授, 清华大学电子工程系 博士</p>
 					<p>Associate Professor, School of Informatics, Xiamen University</p>
 					<p>PhD, Dept. Electronic Engineering, Tsinghua University</p>
-					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
-					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
+					<p>地址：福建省厦门市厦门大学翔安校区信息学院，邮编：361005</p>
+					<p>Address: School of Informatics, Xiang'an Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc (at) xmu.edu.cn  </p>
 					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
 					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1465/25939.htm">厦门大学个人主页 Xiamen University</a></p>
@@ -64,15 +64,15 @@
 -->
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，导师宋健教授, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
+		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著4部、专著章节1部，获得10项发明专利授权。
-		担任一项宽带通信国家标准起草人。福建省高层次人才、福建省引进高层次人才、厦门市高层次人才。获中国电子学会自然科学二等奖、福建省科技进步三等奖、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持多项国家自然科学基金、国家重点实验室开放课题、福建省自然科学基金、厦门市自然科学基金等科研项目。
+		担任一项宽带通信国家标准起草人。福建省高层次人才、福建省引进高层次人才、厦门市高层次人才。获中国电子学会自然科学二等奖、中国地理信息协会地理信息科技进步一等奖、福建省科技进步三等奖、
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持国家自然科学基金面上项目、国家自然科学基金青年基金、国家重点实验室开放课题、福建省自然科学基金面上项目与青年项目、厦门市自然科学基金青年项目等多项科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。获厦门大学高等教育教学成果奖一等奖。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
 
 	<p> IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
-		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。厦门大学第八届教职工代表大会正式代表。
+		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。
 		</p>
 
 	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。<b>欢迎对科研和相关方向感兴趣的同学联系我</b>（电子邮件）</p>
@@ -82,13 +82,13 @@
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song.
 	From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
-	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor and a Master Supervisor in School of Informatics, Xiamen University.</p>
+	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor in School of Informatics, Xiamen University.</p>
 			   
 <p>Sicong Liu has published over 60 journal and conference research papers.He has authored  four monographs and one monograph chapter, of which three as first author. He owns ten Chinese invention patents. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
-	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics, the Third Prize in the Scientific Progress Award of Fujian Province,
+	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics, the First Prize in the Science and Technology Progress Award of China Association for GeoSpatial Industry and Sciences, the Third Prize in the Scientific Progress Award of Fujian Province,
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
-	He has won the Best Paper Award of ACM UbiComp 2021 CPD. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Open Research Fund of National Laboratory on Mobile Communications, Natural Science Foundation of Fujian,
-	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
+	He has won the Best Paper Award of ACM UbiComp 2021 CPD. He has been acting as the principle investigator (PI) for two projects of the National Natural Science Foundation of China (NSFC), Open Research Fund of National Laboratory on Mobile Communications, Natural Science Foundation of Fujian,
+	and the Natural Science Foundation of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
 	and the Major Project of Science and Technology of Fujian. He has won the First Prize of Higher Education and Teaching Award of Xiamen University. He is the first editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
    </p>
 
@@ -116,6 +116,7 @@
 	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
+	<p>&bull; 中国地理信息协会地理信息科技进步一等奖，2024 </p>
 	<p>&bull; 厦门大学高等教育教学成果奖一等奖，2023 </p>
 	<p>&bull; 厦门市高层次人才，2023 </p>
 	<p>&bull; ACM UbiComp 2021 CPD 优秀论文奖，2021 </p>
@@ -132,6 +133,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
+	<p>&bull; First Prize in the Science and Technology Progress Award of China Association for GeoSpatial Industry and Sciences, 2024 </p>
 	<p>&bull; First Prize of Higher Education and Teaching Award of Xiamen University, 2023 </p>
 	<p>&bull; High-Level Talents of Xiamen, 2023 </p>
 	<p>&bull; Best Paper Award of ACM UbiComp 2021 CPD, 2021 </p>
@@ -155,6 +157,8 @@
 	<!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
 <h3>科研项目 Research Grants</h3>
+	<p>&bull; 国家自然科学基金面上项目，稀疏和智能驱动的可见光通信感知融合技术研究，2025年1月-2028年12月，主持</p>
+	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparsity-aware and intelligence-driven visible light communication and sensing integration, 2025.01-2028.12 (PI). </p>
 	<p>&bull; 国家自然科学基金青年基金，面向高可靠车联网通信的稀疏干扰消除方法研究，2020年1月-2022年12月，主持</p>
 	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparse interference cancellation methods for ultra-reliable vehicular communications,  2020.01-2022.12 (PI). </p>
 	<p>&bull; 移动通信国家重点实验室开放课题项目，复杂非平稳水下无线光信道稀疏建模与智能估计技术研究，2023年1月-2024年12月，主持</p>
@@ -222,6 +226,8 @@
 
 <br>
 <p><strong>期刊论文 Journals</strong></p>
+	<p>&bull; <b>S. Liu*</b>, X. Liu, X. Du and M. Guizani, "Smart Jamming for Secrecy: Deep Reinforcement Learning Enabled Secure Visible Light Communication," to appear in <i>IEEE Transactions on Wireless Communications</i>, DOI:10.1109/TWC.2024.3458046, Sep. 2024.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10684100">Abstract</a>][<a target="blank"  href="papers/TWC24liu.pdf">PDF</a>][<a target="blank"  href="papers/TWC24liu.bib">bibtex</a>]</p>
 
 	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control for Massive MIMO Networks: A Reinforcement Learning Based Approach," <i>IEEE Transactions on Wireless Communications</i>, vol. 23, no. 8, pp. 9730-9744, Aug. 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443316">Abstract</a>][<a target="blank"  href="papers/TWC24tang.pdf">PDF</a>][<a target="blank"  href="papers/TWC24tang.txt">bibtex</a>]</p>
@@ -482,7 +488,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Jul. 2024 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Sep. 2024 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
