--- a/sicongliu.html
+++ b/sicongliu.html
@@ -71,7 +71,7 @@
 		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”奖。获ACM UbiComp 2021 CPD优秀论文奖。主持国家自然科学基金面上项目、国家自然科学基金青年基金、国家重点实验室开放课题、福建省自然科学基金面上项目与青年项目、厦门市自然科学基金青年项目等多项科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。获厦门大学高等教育教学成果奖一等奖。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
 
-	<p> IEEE高级会员、中国通信学会高级会员、中国电子学会会员、ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
+	<p> IEEE高级会员，中国自动化学会网联智能专委会委员，中国通信学会高级会员，中国电子学会会员，ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。
 		</p>
 
@@ -92,7 +92,7 @@
 	and the Major Project of Science and Technology of Fujian. He has won the First Prize of Higher Education and Teaching Award of Xiamen University. He is the first editor of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
    </p>
 
-<p>	He is a Senior Member of IEEE and China Institute of Communications (CIC), and a Member of ACM and China Institute of Electronics (CIE). He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, TPC Chair of ACM UbiComp CPD 2022, Track Chair of IEEE ICCE 2019,
+<p>	He is a Senior Member of IEEE, a Board Member of the Interconnection Intelligence Technical Committee of China Association of Automation (CAA), a Senior Member of China Institute of Communications (CIC), and a Member of ACM and China Institute of Electronics (CIE). He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, TPC Chair of ACM UbiComp CPD 2022, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the (Guest) Editorial Board of academic journals including Digital Signal Processing, Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
 	</p>
