--- a/sicongliu.html
+++ b/sicongliu.html
@@ -101,12 +101,12 @@
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
-	<p>2021年8月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>副教授</b></p>
-	<p>2018年2月 - 2021年7月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
-	<p>2017年7月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
-	<p>2012年8月 - 2017年7月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
+	<p>2021年8月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，副教授</p>
+	<p>2018年3月 - 2021年7月 &nbsp;&nbsp; 厦门大学信息学院，助理教授</p>
+	<p>2017年7月 - 2018年3月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，高级工程师</p>
+	<p>2012年8月 - 2017年7月 &nbsp;&nbsp;清华大学电子工程系，获信息与通信工程博士学位</p>
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
-	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，<b>本科</b></p>
+	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，电子信息科学与技术专业，本科</p>
 
 	<p>Aug. 2021 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
 	<p>Feb. 2018 - Jul. 2021 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
