--- a/sicongliu.html
+++ b/sicongliu.html
@@ -108,12 +108,12 @@
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
 	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，电子信息科学与技术专业，本科</p>
 
-	<p>Aug. 2021 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Feb. 2018 - Jul. 2021 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Jul. 2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
-	<p>Aug. 2012-Jul. 2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
-	<p>Aug. 2010-Jan. 2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
-	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
+	<p>Aug. 2021 - Present &nbsp;&nbsp; Associate Professor, School of Informatics, Xiamen University</p>
+	<p>Mar. 2018 - Jul. 2021 &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
+	<p>Jul. 2017 - Mar. 2018 &nbsp;&nbsp; Senior Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+	<p>Aug. 2012 - Jul. 2017 &nbsp;&nbsp; Ph.D., Department of Electronic Engineering, Tsinghua University</p>
+	<p>Aug. 2010 - Jan. 2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
+	<p>Aug. 2008 - Jul. 2012 &nbsp; Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
 	<p>&bull; 中国地理信息协会地理信息科技进步一等奖，2024 </p>
