--- a/sicongliu.html
+++ b/sicongliu.html
@@ -163,6 +163,8 @@
 	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparse interference cancellation methods for ultra-reliable vehicular communications,  2020.01-2022.12 (PI). </p>
 	<p>&bull; 移动通信国家重点实验室开放课题项目，复杂非平稳水下无线光信道稀疏建模与智能估计技术研究，2023年1月-2024年12月，主持</p>
 	<p>&nbsp; Open Research Fund of National Laboratory of Mobile Communications, Research on complex channel sparse modelling and smart estimation for underwater wireless optical communications, 2023.01-2024.12 (PI). </p>
+	<p>&bull; 广东省自然科学基金青年提升项目，面向无线光通信的通感多重智能融合关键技术研究，2024年1月-2026年12月，主持</p>
+	<p>&nbsp; Natural Science Foundation of Guangdong Province of China, Study on multi-dimensional intelligent integration of communication and sensing for optical wireless communications, 2024.01-2026.12 (PI). </p>
 	<p>&bull; 福建省自然科学基金面上项目，水下可见光通信的复杂信道稀疏表征和智能估计技术研究，2023年8月-2026年7月，主持</p>
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on sparse modelling and intelligent estimation of underwater VLC channels, 2023.08-2026.07 (PI). </p>
 	<p>&bull; 福建省自然科学基金青年项目，面向新一代无线通信的多重压缩感知与稀疏学习技术研究，2019年7月-2022年6月，主持</p>
@@ -226,13 +228,16 @@
 
 <br>
 <p><strong>期刊论文 Journals</strong></p>
-	<p>&bull; <b>S. Liu*</b>, X. Liu, X. Du and M. Guizani, "Smart Jamming for Secrecy: Deep Reinforcement Learning Enabled Secure Visible Light Communication," to appear in <i>IEEE Transactions on Wireless Communications</i>, DOI:10.1109/TWC.2024.3458046, Sep. 2024.
+	<p>&bull; <b>S. Liu*</b>, X. Tang and L. Song, "Massive Random Access Control for VLC: A Reinforcement Learning Driven Approach," <i>IEEE Photonics Technology Letters</i>, doi: 10.1109/LPT.2025.3533587, Jan. 2025.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/10852317">Abstract</a>][<a target="blank"  href="papers/PTL25liu.pdf">PDF</a>][<a target="blank"  href="papers/PTL25liu.bib">bibtex</a>]</p>
+
+	<p>&bull; <b>S. Liu*</b>, X. Liu, X. Du and M. Guizani, "Smart Jamming for Secrecy: Deep Reinforcement Learning Enabled Secure Visible Light Communication," <i>IEEE Transactions on Wireless Communications</i>, vol. 23, no. 12, pp. 17915-17928, Dec. 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10684100">Abstract</a>][<a target="blank"  href="papers/TWC24liu.pdf">PDF</a>][<a target="blank"  href="papers/TWC24liu.bib">bibtex</a>]</p>
 
 	<p>&bull; X. Tang, <b>S. Liu*</b>, X. Du and M. Guizani, "Sparsity-Aware Intelligent Massive Random Access Control for Massive MIMO Networks: A Reinforcement Learning Based Approach," <i>IEEE Transactions on Wireless Communications</i>, vol. 23, no. 8, pp. 9730-9744, Aug. 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443316">Abstract</a>][<a target="blank"  href="papers/TWC24tang.pdf">PDF</a>][<a target="blank"  href="papers/TWC24tang.txt">bibtex</a>]</p>
 
-	<p>&bull; <b>S. Liu*</b>, X. Wang, J. Song and Z. Han, "Cooperative Robotics Visible Light Positioning: An Intelligent Compressed Sensing and GAN-Enabled Framework," <i>IEEE Journal of Selected Topics in Signal Processing</i>, doi: 10.1109/JSTSP.2024.3368661, Feb. 2024.
+	<p>&bull; <b>S. Liu*</b>, X. Wang, J. Song and Z. Han, "Cooperative Robotics Visible Light Positioning: An Intelligent Compressed Sensing and GAN-Enabled Framework," <i>IEEE Journal of Selected Topics in Signal Processing</i>, vol. 18, no. 3, pp. 407-418, April 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10443444">Abstract</a>][<a target="blank"  href="papers/JSTSP24wang.pdf">PDF</a>][<a target="blank"  href="papers/JSTSP24wang.txt">bibtex</a>]</p>
 
 	<p>&bull;Y. Su, Y. Lin, <b>S. Liu</b>, et al, "Coexistence of Hybrid VLC-RF and Wi-Fi for Indoor Wireless Communication Systems: An Intelligent Approach," <i>IEEE Transactions on Network and Service Management</i>, doi: 10.1109/TNSM.2024.3436887, Aug. 2024.
@@ -247,6 +252,10 @@
 	<p>&bull; C. Liang, J. Li, <b>S. Liu</b> , F. Yang, Y. Dong, J. Song, X.-P. Zhang, W. Ding, "Integrated sensing, lighting and communication based on visible light communication: A review," <i>Digital Signal Processing</i>, vol. 145, Fec. 2024.
 		[<a target="blank" href="https://www.sciencedirect.com/science/article/pii/S1051200423004359">Abstract</a>][<a target="blank"  href="papers/DSP24dwb.pdf">PDF</a>][<a target="blank"  href="papers/DSP24dwb.bib">bibtex</a>]</p>
 
+	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 12, pp. 7086-7103, Dec. 2023.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9894087">Abstract</a>][<a target="blank"  href="papers/TMC22wei.pdf">PDF</a>][<a target="blank"  href="papers/TMC22wei.txt">bibtex</a>]</p>
+
+
 	<p>&bull; Y. Liao, <b>S. Liu*</b>, X. Hong, J. Shi and L. Cheng, "Integration of Communication and Navigation Technologies Towards LEO-Enabled 6G Networks: A Survey," <i>Space: Science & Technology (Science Partner Journals)</i>, vol. 3, no. 92, pp. 1-31, Oct. 2023.
 	[<a target="blank" href="https://spj.science.org/doi/10.34133/space.0092">DOI: 10.34133/space.0092</a>]</p>
 
@@ -258,11 +267,6 @@
 
 	<p>&bull; <b>S. Liu*</b>, Y. Mou, X. Wang, D. Su, L. Cheng, "Denoising enabled channel estimation for underwater acoustic communications: A sparsity-aware model-driven learning approach," <i>Intelligent and Converged Networks</i>, vol. 4, no. 1, pp. 1-14, March 2023.
 		[<a target="blank" href="https://ieeexplore.ieee.org/abstract/document/10134537">Abstract</a>]</p>
-
-
-	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Visible Light Integrated Positioning and Communication: A Multi-Task Federated Learning Framework," <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 12, pp. 7086-7103, Dec. 2023.
-		[<a target="blank" href="https://ieeexplore.ieee.org/document/9894087">Abstract</a>][<a target="blank"  href="papers/TMC22wei.pdf">PDF</a>][<a target="blank"  href="papers/TMC22wei.txt">bibtex</a>]</p>
-
 
 	<p>&bull; T. Wei, <b>S. Liu*</b> and X. Du, "Learning-Based Efficient Sparse Sensing and Recovery for Privacy-Aware IoMT," <i>IEEE Internet of Things Journal</i>, vol. 9, no. 12, pp. 9948-9959, June 2022.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9745135">Abstract</a>][<a target="blank"  href="papers/JIOT22wei.pdf">PDF</a>][<a target="blank"  href="papers/JIOT22wei.txt">bibtex</a>]</p>
@@ -488,7 +492,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Sep. 2024 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Jan. 2025 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
