--- a/sicongliu.html
+++ b/sicongliu.html
@@ -161,6 +161,10 @@
 	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparsity-aware and intelligence-driven visible light communication and sensing integration, 2025.01-2028.12 (PI). </p>
 	<p>&bull; 国家自然科学基金青年基金，面向高可靠车联网通信的稀疏干扰消除方法研究，2020年1月-2022年12月，主持</p>
 	<p>&nbsp;&nbsp;National Natural Science Foundation of China, Research on sparse interference cancellation methods for ultra-reliable vehicular communications,  2020.01-2022.12 (PI). </p>
+	<p>&bull; 国家重点研发计划，新形态多功能室内智慧照明关键技术及系统集成，2017年1月-2020年12月，项目骨干</p>
+	<p>&nbsp;&nbsp;National Key Research and Development Project of China, Key Technologies and System Integration of New-Form Multi-Functional Indoor Intelligent Lighting,  2017.01-2020.12 (Key Participator). </p>
+	<p>&bull; 国家科技重大专项，IMT-2020候选频段分析与评估，2015年1月-2017年12月，参与</p>
+	<p>&nbsp;&nbsp;National Key Science and Technology Research Project of China, Analysis and Evaluation of IMT-2020 Candidate Frequency Bands,  2015.01-2017.12 (Participator). </p>
 	<p>&bull; 移动通信国家重点实验室开放课题项目，复杂非平稳水下无线光信道稀疏建模与智能估计技术研究，2023年1月-2024年12月，主持</p>
 	<p>&nbsp; Open Research Fund of National Laboratory of Mobile Communications, Research on complex channel sparse modelling and smart estimation for underwater wireless optical communications, 2023.01-2024.12 (PI). </p>
 	<p>&bull; 广东省自然科学基金青年提升项目，面向无线光通信的通感多重智能融合关键技术研究，2024年1月-2026年12月，主持</p>
@@ -169,7 +173,7 @@
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on sparse modelling and intelligent estimation of underwater VLC channels, 2023.08-2026.07 (PI). </p>
 	<p>&bull; 福建省自然科学基金青年项目，面向新一代无线通信的多重压缩感知与稀疏学习技术研究，2019年7月-2022年6月，主持</p>
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on compressed sensing and sparse learning technologies for next-generation wireless communications, 2019.07-2022.06 (PI). </p>
-	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，2020年7月-2023年6月，主持</p>
+	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，15万元，2020年7月-2023年6月，主持</p>
 	<p>&nbsp; Youth Innovation Fund of Natural Science Fund of Xiamen, Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments, 2020.07-2023.06 (PI)</p>
 	<p>&bull; 中央高校基本科研项目，基于压缩感知与机器学习的5G无线通信关键技术研究，2019年1月-2019年12月，主持</p>
 	<p>&nbsp; Fundamental Research Funds for the Central Universities of China, Study on key technologies of 5G wireless communications based on compressed sensing and machine learning, 2019.01-2019.12 (PI). </p>
