--- a/sicongliu.html
+++ b/sicongliu.html
@@ -173,7 +173,7 @@
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on sparse modelling and intelligent estimation of underwater VLC channels, 2023.08-2026.07 (PI). </p>
 	<p>&bull; 福建省自然科学基金青年项目，面向新一代无线通信的多重压缩感知与稀疏学习技术研究，2019年7月-2022年6月，主持</p>
 	<p>&nbsp; Natural Science Foundation of Fujian Province of China, Study on compressed sensing and sparse learning technologies for next-generation wireless communications, 2019.07-2022.06 (PI). </p>
-	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，15万元，2020年7月-2023年6月，主持</p>
+	<p>&bull; 厦门市自然科学基金青年创新基金，复杂5G无线环境下的稀疏干扰智能消除方法，2020年7月-2023年6月，主持</p>
 	<p>&nbsp; Youth Innovation Fund of Natural Science Fund of Xiamen, Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments, 2020.07-2023.06 (PI)</p>
 	<p>&bull; 中央高校基本科研项目，基于压缩感知与机器学习的5G无线通信关键技术研究，2019年1月-2019年12月，主持</p>
 	<p>&nbsp; Fundamental Research Funds for the Central Universities of China, Study on key technologies of 5G wireless communications based on compressed sensing and machine learning, 2019.01-2019.12 (PI). </p>
