--- a/sicongliu.html
+++ b/sicongliu.html
@@ -72,7 +72,7 @@
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。获厦门大学高等教育教学成果奖一等奖。主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材。</p>
 
 	<p> IEEE高级会员，中国自动化学会网联智能专委会委员，中国通信学会高级会员，中国电子学会会员，ACM会员。参与多个国际学术会议的组织工作，包括担任 IEEE SmartGridComm 2019 的 Publication Chair，IEEE ISPLC 2021 的 TPC Chair, ACM UbiComp CPD 2022 的 TPC Chair, IEEE ICCC 2021 的 Workshop Chair，IEEE ICCE 2019 的 Track Chair，
-		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编委或特邀编委。
+		以及包括IEEE ICC/Globecom在内的多个国际学术会议技术程序委员会委员。担任Digital Signal Processing, Scientific Reports, Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal, 光通信研究等国内外学术期刊编委或特邀编委。
 		</p>
 
 	<p>目前的研究兴趣为通信感知一体化、可见光通信、压缩感知、基于人工智能的通信技术。<b>欢迎对科研和相关方向感兴趣的同学联系我</b>（电子邮件）</p>
@@ -94,7 +94,7 @@
 
 <p>	He is a Senior Member of IEEE, a Board Member of the Interconnection Intelligence Technical Committee of China Association of Automation (CAA), a Senior Member of China Institute of Communications (CIC), and a Member of ACM and China Institute of Electronics (CIE). He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, TPC Chair of ACM UbiComp CPD 2022, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
-	He serves in the (Guest) Editorial Board of academic journals including Digital Signal Processing, Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
+	He serves in the (Guest) Editorial Board of academic journals including Digital Signal Processing, Scientific Reports, Future Internet Journal, Sensors Journal, Frontiers in Communications and Networks, and Study on Optical Communications.
 	</p>
 
 <p>His current research interests  lie in integrated sensing and communication (ISAC), visible light communication (VLC), compressed sensing (CS), and AI-assisted communications.</p>
@@ -116,10 +116,11 @@
 	<p>Aug. 2008 - Jul. 2012 &nbsp; Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
+	<p>&bull; IEEE IWCMC 2025 最佳论文奖，2025 </p>
 	<p>&bull; 中国地理信息协会地理信息科技进步一等奖，2024 </p>
 	<p>&bull; 厦门大学高等教育教学成果奖一等奖，2023 </p>
 	<p>&bull; 厦门市高层次人才，2023 </p>
-	<p>&bull; ACM UbiComp 2021 CPD 优秀论文奖，2021 </p>
+	<p>&bull; ACM UbiComp 2021 CPD 最佳论文奖，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖，2019 </p>
 	<p>&bull; 福建省科技进步三等奖，2019 </p>
@@ -133,6 +134,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
+	<p>&bull; Best Paper Award of IEEE IWCMC 2025, 2025 </p>
 	<p>&bull; First Prize in the Science and Technology Progress Award of China Association for GeoSpatial Industry and Sciences, 2024 </p>
 	<p>&bull; First Prize of Higher Education and Teaching Award of Xiamen University, 2023 </p>
 	<p>&bull; High-Level Talents of Xiamen, 2023 </p>
@@ -227,6 +229,7 @@
 
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
+	    <img src="images/book_wireless_security.jpg" width = 120/><img src="images/IWCMC_BPA.png" width = 240/>
 
 	</p>
 
