--- a/sicongliu.html
+++ b/sicongliu.html
@@ -64,7 +64,7 @@
 -->
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获<a target="blank" href="https://www.ee.tsinghua.edu.cn/">清华大学电子工程系</a>信息与通信工程博士学位，导师<a target="blank" href="http://people.ee.tsinghua.edu.cn/info/1143/1844.htm">宋健教授</a>, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授。</p>
+		2018年起任厦门大学信息学院助理教授。现任<a target="blank" href="https://informatics.xmu.edu.cn/">厦门大学信息学院</a>副教授。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著4部、专著章节1部，获得10项发明专利授权。
 		担任一项宽带通信国家标准起草人。福建省高层次人才、福建省引进高层次人才、厦门市高层次人才。获中国电子学会自然科学二等奖、中国地理信息协会地理信息科技进步一等奖、福建省科技进步三等奖、
@@ -82,7 +82,7 @@
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by <a target="blank" href="http://people.ee.tsinghua.edu.cn/info/1143/1844.htm">Prof. Jian Song</a>.
 	From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
-	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor in School of Informatics, Xiamen University.</p>
+	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor in <a target="blank" href="https://informatics.xmu.edu.cn/">School of Informatics, Xiamen University</a>.</p>
 			   
 <p>Sicong Liu has published over 60 journal and conference research papers.He has authored  four monographs and one monograph chapter, of which three as first author. He owns ten Chinese invention patents. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics, the First Prize in the Science and Technology Progress Award of China Association for GeoSpatial Industry and Sciences, the Third Prize in the Scientific Progress Award of Fujian Province,
@@ -116,7 +116,7 @@
 	<p>Aug. 2008 - Jul. 2012 &nbsp; Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
-	<p>&bull; <a target="blank" href="https://ce.xmu.edu.cn/2025/0618/c6816a492571/page.htm">IEEE IWCMC 2025 最佳论文奖，2025</a> </p>
+	<p>&bull; <a target="blank" href="https://ce.xmu.edu.cn/info/1026/1100.htm">IEEE IWCMC 2025 最佳论文奖，2025</a> </p>
 	<p>&bull; 中国地理信息协会地理信息科技进步一等奖，2024 </p>
 	<p>&bull; 厦门大学高等教育教学成果奖一等奖，2023 </p>
 	<p>&bull; 厦门市高层次人才，2023 </p>
@@ -134,7 +134,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
-	<p>&bull; <a target="blank" href="https://ce.xmu.edu.cn/2025/0618/c6816a492571/page.htm">Best Paper Award of IEEE IWCMC 2025, 2025</a> </p>
+	<p>&bull; <a target="blank" href="https://ce.xmu.edu.cn/info/1026/1100.htm">Best Paper Award of IEEE IWCMC 2025, 2025</a> </p>
 	<p>&bull; First Prize in the Science and Technology Progress Award of China Association for GeoSpatial Industry and Sciences, 2024 </p>
 	<p>&bull; First Prize of Higher Education and Teaching Award of Xiamen University, 2023 </p>
 	<p>&bull; High-Level Talents of Xiamen, 2023 </p>
@@ -202,8 +202,8 @@
 <h3>教学工作 Teaching</h3>
 	<p>&bull; CST304: Digital Signal Processing, Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
 	<p>&bull; CST103: Programming Language (C), Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
-	<p>&bull; 通信电路原理, 本科生, 2018/2019、2019/2020、2020/2021、2021/2022、2023/2024学年，厦门大学</p>
-	<p>&bull; 数字通信, 研究生, 2022/2023、2023/2024学年，厦门大学</p>
+	<p>&bull; 通信电路原理, 本科生, 2018/2019、2019/2020、2020/2021、2021/2022、2023/2024、2024/2025学年，厦门大学</p>
+	<p>&bull; 数字通信, 研究生, 2022/2023、2023/2024、2024/2025、2025/2026学年，厦门大学</p>
 	<p>&bull; 无线通信原理, 本科生, 2019/2020、2020/2021、2021/2022学年, 厦门大学</p>
 	<p>&bull; 数字信号处理实验, 本科生, 2019/2020、2020/2021学年，厦门大学</p>
 	<p>&bull; 数字电视技术, 本科生, 2022/2023学年，厦门大学</p>
@@ -231,7 +231,7 @@
 
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
-	<img src="images/book_wireless_security.jpg" width = 120/><a target="blank" href="https://ce.xmu.edu.cn/2025/0618/c6816a492571/page.htm"><img src="images/IWCMC_BPA.png" width = 240/></a>
+	<img src="images/book_wireless_security.jpg" width = 120/><a target="blank" href="https://ce.xmu.edu.cn/info/1026/1100.htm"><img src="images/IWCMC_BPA.png" width = 240/></a>
 
 	</p>
 
@@ -368,6 +368,9 @@
 <br>
 <p><strong>会议论文 Conferences</strong></p>
 
+	<p>&bull; <b>S. Liu</b>*, T. Wei, Bin Chen, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," <i>2025 International Wireless Communications and Mobile Computing (2025 IEEE IWCMC)</i>, pp. 25-30, May 2025.
+	[<a target="blank" href="https://ieeexplore.ieee.org/document/11059516">Abstract</a>]</p>
+
 	<p>&bull; <b>S. Liu</b>*, Y. Mou, H. Zhang, "Block-Sparse Learning Enabled Approach Towards Efficient Channel Estimation for Underwater Visible Light Communications,” <i>2024 International Wireless Communications and Mobile Computing (IWCMC)</i>, Ayia Napa, Cyprus, pp. 1166-1170, June 2024.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10592451">Abstract</a>]</p>
 
@@ -380,8 +383,6 @@
 	<p>&bull; Y. Mou, <b>S. Liu</b>*, "Channel Estimation for Underwater Visible Light Communication: A Sparse Learning Perspective,” <i>2023 IEEE International Conference on Communications (ICC) Workshops</i>, Rome, Italy, pp. 943-948, May 2023.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/10283706">Abstract</a>]</p>
 
-	<p>&bull; T. Wei and <b>S. Liu</b>*, "Privacy-Preserving Cooperative Visible Light Positioning for Nonstationary Environment: A Federated Learning Perspective," <i>ACM UbiComp'22</i>, pp. 450–455, Sept 2022.
-		[<a target="blank" href="https://dl.acm.org/doi/10.1145/3544793.3560406">Abstract</a>]</p>
 
     <p>&bull; X. Tang, and <b>S. Liu</b>*, "Power and Interference Control for VLC-Based UDN: A Reinforcement Learning Approach," <i>ACM UbiComp'22</i>, pp. 432-437, Sept 2022.
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3544793.3560403">Abstract</a>]</p>
@@ -449,6 +450,8 @@
 
 <br>
 <p><strong>学术报告 Invited Speeches and Talks</strong></p>
+<p>&bull; 在 2025 13th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC) 会议做邀请学术报告</p>
+	<p> &nbsp; Invited speech, 2025 13th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC)</p>
 <p>&bull; 在 2024 12th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC) 会议做邀请学术报告</p>
 	<p> &nbsp; Invited speech, 2024 12th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC)</p>
 <p>&bull; 在 2023 11th International Conference on Intelligent Computing and Wireless Optical Communications (ICWOC) 会议做邀请学术报告</p>
@@ -501,7 +504,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Jan. 2025 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Sept. 2025 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
