--- a/sicongliu.html
+++ b/sicongliu.html
@@ -47,7 +47,7 @@
 					<p>Address: School of Informatics, Xiang'an Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc (at) xmu.edu.cn  </p>
 					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
-					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1465/25939.htm">厦门大学个人主页 Xiamen University</a></p>
+					&nbsp; &nbsp; <a target="blank" href="https://faculty.xmu.edu.cn/LSC/zh_CN/zhym/584510/list/index.htm">厦门大学个人主页 Xiamen University</a></p>
 									<br><br>
 				</div>
 			</div>
